# HateLens

./: .gitignore  CHANGELOG.md  README.md  compute_lime_scores.py  evaluate_models.py  pyproject.toml  requirements.txt  run_training_dynahate.sh  run_training_hatecheck.sh  trainer_dynahate.py  trainer_hatecheck.py
.github/workflows/: ci.yml
cluster/: sbatch_train.sh
configs/: README.md
configs/eval/: minimal.yaml  paper_followup.yaml
configs/experiments/: README.md
configs/models/: opt-1.3b.yaml  phi-2.yaml  qwen2.5-1.5b.yaml  tinyllama-legacy.yaml  tinyllama-structured.yaml  tinyllama.yaml
configs/smoke/: tinyllama_dynahate.yaml
docs/: architecture.md  cluster-runbook.md  datasets.md  evaluation.md  experiments.md  framework-audit-2026.md  github-actions-ci.yml  refactor-plan.md  related-work.md  repo-audit.md  results-summary.md
docs/paper/: main.tex  references.bib
docs/paper_figures/: README.md  results_summary.json
experiments/TinyLlama/: config.yaml
notebooks/: plot_lime_barplots.ipynb
scripts/: compute_lime_scores.py  evaluate_models.py  generate_paper_figures.py  train_dynahate.sh  train_hatecheck.sh  trainer_dynahate.py  trainer_hatecheck.py
scripts/slurm/: eval_bundle.sh  submit_matrix_engaging.sh  submit_paper_followup.sh  (+2 more)
tests/: conftest.py  test_calibration.py  test_cli_subcommands.py  test_consistency_numpy.py  test_datasets.py  test_diagnostics.py  test_eval_runner.py  test_layout.py  test_mapping.py  test_metrics.py  test_modeling_local_adapter.py  test_parsing.py  test_registry.py  test_structured_collator.py  test_structured_outputs_trainer_compat.py  test_structured_run_subdir.py  test_training_artifacts.py  test_training_coexistence.py
utils/: compute_lime_hatecheck.py  datasets.py
(+52 files in other folders)
